@@ -1,0 +1,19 @@
+<h1>八年等待終於來了！BLACKPINK Rosé 首張個人專輯《Rosie》12月發行</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0wuO3J3WwSE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>BLACKPINK成員Rosé即將推出她的首張個人專輯《Rosie》，距離她出道已經八年多了。這張專輯將於12月6日發行，預計將展現她的個人身份，讓粉絲期待她通過音樂分享她的個人故事和經歷。</p>
+<p>專輯名稱《Rosie》是Rosé的暱稱，她參與了所有歌曲的填詞和作曲，承諾會呈現更真誠和親密的自我形象。這張專輯將會包含12首歌曲，讓粉絲期待她的音樂才華。</p>
+<p>專輯封面展示了Rosé的金髮和紅潤的臉龐，直視鏡頭。這張照片預示著她即將推出的音樂將會更加成熟和迷人。</p>
+<p>自2016年8月作為BLACKPINK的主唱出道以來，Rosé已經打破了許多K-pop行業的紀錄。2021年，她以個人身份發行了實體單曲《R》，其中的主打歌《On The Ground》登上了告示牌全球二百大單曲榜的第一位和告示牌百大單曲榜的第70位。</p>
+<p>今年早些時候，Rosé與黑標簽訂了個人經紀合約，黑標由BLACKPINK的主製作人Teddy領導。她還與大西洋唱片（Atlantic Records）簽約，這是一家主要的美國唱片公司，為她的國際活動鋪平了道路。</p>
+<p>以下是Rosé的首張個人專輯《Rosie》的詳細資訊：</p>
+<ul>
+<li>發行日期：12月6日</li>
+<li>專輯名稱：《Rosie》</li>
+<li>歌曲數量：12首</li>
+<li>製作公司：黑標（The Black Label）</li>
+<li>發行公司：大西洋唱片（Atlantic Records）</li>
+<p></ul></p>
+
+<p>資料來源： Korea Herald</p>
